--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,6 @@
 /* mix-ins */
 .clearfix {
-  :before,
+  &:before,
   &:after {
       content: "";
       display: table;
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Element-specfic */
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   background-color: @nq-white;
   color: @nq-black;
   height: 100%;
@@ -92,6 +92,12 @@ header.header {
     padding: .5rem;
   }
 
+  a, a:visited, a:active {
+    color: @header-blue;
+    text-decoration: none;
+    font-weight: 600;
+  }
+
   &#bio {
     .bio-figure {
       display: none;
@@ -108,7 +114,7 @@ header.header {
 }
 
 section.body-section.last {
-  padding-bottom: 4rem; /*height of footer*/
+  /*padding-bottom: 4rem; height of footer*/
 }
 
 footer.notice {
@@ -120,6 +126,10 @@ footer.notice {
   width: 100%;
 }
 
+/*
+ * Responsiveness
+ */
+
 @media only screen 
   and (min-width : 1024px) {
   header.header {
@@ -127,6 +137,7 @@ footer.notice {
     top: 0;
     width: 100%;
     background-color: fadeout(@header-blue, 15%);
+    z-index: 1000;
 
     section.header-wrapper {
       max-width: 1200px;
@@ -175,7 +186,11 @@ footer.notice {
   }
 
   section.body-section {
-    font-size: 150%;
+    font-size: 145%;
+
+    .content {
+      padding: 2em;
+    }
 
     &#bio {
       .bio-figure {
@@ -183,7 +198,7 @@ footer.notice {
         display: inline-block;
         margin: 0;
         font-size: 0;
-        margin-right: 1rem;
+        margin-right: 2.5rem;
 
         .bio-image {
           width: 360px;
@@ -196,7 +211,7 @@ footer.notice {
     h2 {
       background-color: @header-blue;
       color: @nq-white;
-      font-size: 2.7rem;
+      font-size: 3.5rem;
       font-weight: 400;
       padding: .3em .3em .3em 1.3em;
     }
