Made copyright disappear on small screens

--- a/less/style.less
+++ b/less/style.less
@@ -166,6 +166,13 @@ footer {
  */
 
 @media only screen 
+  and (max-width : 400px) {
+  footer .copyright-notice {
+    display: none;
+  }
+}
+
+@media only screen 
   and (min-width : 1024px) {
   header.header {
     position: fixed;
