Added DriveCoin, updated some dates and bio

--- a/less/style.less
+++ b/less/style.less
@@ -115,6 +115,14 @@ header.header {
       margin-bottom: .5em;
     }
   }
+
+  article header {
+    .subheading {
+      font-style: italic;
+      font-size: 80%;
+    }
+    margin-bottom: 0.4em;
+  }
 }
 
 section.body-section.last {
